slider wrap + img

--- a/index.html
+++ b/index.html
@@ -9,6 +9,18 @@
         <script src="main.js"></script>
     </head>
     <body>
-        
+        <!--Slider Block-->
+        <ul class="simple-slider_wrap">
+            <li class="simple-slider_item active">
+                <img src="./img/1.jpg" alt="Background pic first" class="simple-slider_img">
+            </li>
+            <li class="simple-slider_item">
+                <img src="./img/2.jpg" alt="" class="simple-slider_img">
+            </li>
+            <li class="simple-slider_item">
+                <img src="./img/3.jpg" alt="" class="simple-slider_img">
+            </li>
+        </ul>
+        <!--Slider Buttons-->
     </body>
 </html>
