--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <!--Slider Block-->
-        <ul class="simple-slider_wrap">
+        <ul class="simple-slider_wrap" id="slider">
             <li class="simple-slider_item active">
                 <img src="./img/1.jpg" alt="Background pic first" class="simple-slider_img">
             </li>
@@ -22,5 +22,9 @@
             </li>
         </ul>
         <!--Slider Buttons-->
+        <div class="simple-slider_arrows">
+            <span class="button-arrow_next" id="next">Right</span>
+            <span class="button-arrow_prew" id="prew">Left</span>
+        </div>
     </body>
 </html>
