--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         </ul>
         <!--Slider Buttons-->
         <div class="simple-slider_arrows">
-            <span class="button-arrow_next" id="next">Right</span>
-            <span class="button-arrow_prew" id="prew">Left</span>
+            <span class="button-arrow_next arrow-button" id="next">Right</span>
+            <span class="button-arrow_prew arrow-button" id="prew">Left</span>
         </div>
     </body>
 </html>
