rechange a simple slider

--- a/index.html
+++ b/index.html
@@ -9,22 +9,29 @@
         <script src="main.js"></script>
     </head>
     <body>
-        <!--Slider Block-->
-        <ul class="simple-slider_wrap" id="slider">
-            <li class="simple-slider_item active">
-                <img src="./img/1.jpg" alt="Background pic first" class="simple-slider_img">
-            </li>
-            <li class="simple-slider_item">
-                <img src="./img/2.jpg" alt="" class="simple-slider_img">
-            </li>
-            <li class="simple-slider_item">
-                <img src="./img/3.jpg" alt="" class="simple-slider_img">
-            </li>
-        </ul>
-        <!--Slider Buttons-->
-        <div class="simple-slider_arrows">
-            <span class="button-arrow_next arrow-button" id="next">Right</span>
-            <span class="button-arrow_prew arrow-button" id="prew">Left</span>
+
+        <div class="simple-slider_wrap">
+            <div class="simple-slider_item">
+                <img src="" alt="" class="slider-item_img">
+                <div class="slider-item_text"></div>
+            </div>
+            <div class="simple-slider_item">
+                <img src="" alt="" class="slider-item_img">
+                <div class="slider-item_text"></div>
+            </div>
+            <div class="simple-slider_item">
+                <img src="" alt="" class="slider-item_img">
+                <div class="slider-item_text"></div>
+            </div>
+            <!--Button on area-->
+            <a class="prev" id="prev"> &#10094; </a>
+            <a class="next" id="next"> &#10095; </a>
         </div>
+            <!--doots if need-->
+            <!-- <div class="simple-slider_dots">
+                <span class="slider-dots_item"></span>
+                <span class="slider-dots_item"></span>
+                <span class="slider-dots_item"></span>
+            </div> -->
     </body>
 </html>
