--- a/index.html
+++ b/index.html
@@ -12,20 +12,20 @@
 
         <div class="simple-slider_wrap">
             <div class="simple-slider_item">
-                <img src="" alt="" class="slider-item_img">
+                <img src="./img/1.jpg" alt="" class="slider-item_img">
                 <div class="slider-item_text"></div>
             </div>
             <div class="simple-slider_item">
-                <img src="" alt="" class="slider-item_img">
+                <img src="./img/2.jpg" alt="" class="slider-item_img">
                 <div class="slider-item_text"></div>
             </div>
             <div class="simple-slider_item">
-                <img src="" alt="" class="slider-item_img">
+                <img src="./img/3.jpg" alt="" class="slider-item_img">
                 <div class="slider-item_text"></div>
             </div>
             <!--Button on area-->
-            <a class="prev" id="prev"> &#10094; </a>
-            <a class="next" id="next"> &#10095; </a>
+            <a class="prev simple-slider_button" id="prev"> &#10094; </a>
+            <a class="next simple-slider_button" id="next"> &#10095; </a>
         </div>
             <!--doots if need-->
             <!-- <div class="simple-slider_dots">
