nwo i think i creating a pure simple css+html slider

--- a/index.html
+++ b/index.html
@@ -1,15 +1,23 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width , initial-scale">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>SimpleSlider</title>
-        <link rel="stylesheet" href="main.css">
-        <script src="main.js"></script>
-    </head>
-    <body>
 
- 
-    </body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width , initial-scale">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>SimpleSlider</title>
+    <link rel="stylesheet" href="main.css">
+    <script src="main.js"></script>
+</head>
+
+<body>
+
+    <div class="simple-slider_wrap">
+        <div class="simple-slider_window">
+            <h1 class="simple-slider_text">Some text</h1>
+        </div>
+    </div>
+
+</body>
+
 </html>
